--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -124,6 +124,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/relativeLayout1"
                         android:layout_marginTop="20dp"
                         android:layout_marginLeft="30dp"
+                        android:layoutAnimation="@anim/layout_animation_right"
                         tools:listitem="@layout/listview_teachers"
                         android:orientation="horizontal"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -159,6 +160,7 @@
                         android:layout_marginBottom="20dp"
                         android:layout_marginLeft="30dp"
                         tools:listitem="@layout/listview_papers"
+                        android:layoutAnimation="@anim/layout_animation_right"
                         android:orientation="horizontal"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         android:layout_height="wrap_content"/>
