--- a/app/src/main/res/layout/listview_teachers.xml
+++ b/app/src/main/res/layout/listview_teachers.xml
@@ -6,7 +6,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_dealer_to_visits"
         style="@style/CardViewStyle"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         app:cardBackgroundColor="@color/babypowder"
