--- a/app/src/main/res/layout/listview_teachers.xml
+++ b/app/src/main/res/layout/listview_teachers.xml
@@ -27,9 +27,10 @@
             android:layout_width="match_parent"
             android:background="@color/babypowder"
             android:layout_height="match_parent"
+            android:layout_marginRight="5dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
@@ -66,7 +67,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:text="Amith Pussellasasassasasas"
+                android:text=""
                 app:fontFamily="@font/cutive_mono"
                 android:textColor="@color/textcolor1"
                 android:textSize="16sp" android:textStyle="bold"/>
