--- a/app/src/main/res/layout/listview_teachers.xml
+++ b/app/src/main/res/layout/listview_teachers.xml
@@ -6,8 +6,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_dealer_to_visits"
         style="@style/CardViewStyle"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_alignParentTop="true"
         app:cardBackgroundColor="@color/babypowder"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,7 +27,6 @@
             android:layout_width="match_parent"
             android:background="@color/babypowder"
             android:layout_height="match_parent"
-            android:layout_marginRight="5dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginBottom="5dp"
@@ -40,7 +39,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 android:background="@color/colorPrimary"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_height="match_parent" >
+                android:layout_height="100dp" >
 
             <ImageView
                     android:id="@+id/img_home_teacher"
