--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,176 +1,210 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
                 name="home"
                 type="crew8.project.nito.viewModel.home.HomeViewModel"/>
 
         <import type="android.view.View"></import>
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+
+    <androidx.drawerlayout.widget.DrawerLayout
+            android:id="@+id/drawer_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/babypowder"
-            tools:context=".view.home.activity.HomeActivity">
-
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="30sp"
-                android:textColor="@color/textcolor0"
-                android:id="@+id/textview0"
-                android:text="Nito"
-                android:layout_marginLeft="20dp"
-                android:visibility="gone"
-                android:fontFamily="@font/cutive_mono"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:textStyle="normal"
-                android:layout_marginTop="20dp"/>
-
-
-        <ImageView android:layout_width="25dp"
-                   android:layout_height="25dp"
-                   app:srcCompat="@drawable/ic_settings"
-                   app:layout_constraintRight_toRightOf="parent"
-                   android:layout_marginTop="25dp"
-                   android:layout_marginRight="20dp"
-                   app:layout_constraintTop_toTopOf="parent"/>
-
+            android:fitsSystemWindows="true"
+            tools:openDrawer="end">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/constraintlayout_1"
                 android:layout_width="match_parent"
-                android:background="@drawable/bg_shadow_border"
-                android:layout_height="45dp"
-                android:elevation="2dp"
-                android:layout_marginTop="70dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginRight="20dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_height="match_parent"
+                android:background="@color/babypowder"
+                tools:context=".view.home.activity.HomeActivity">
 
-            <AutoCompleteTextView
+
+            <TextView
+                    android:id="@+id/textview0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:hint="Search Teachers"
-                    android:layout_marginLeft="10dp"
-                    android:textSize="16sp"
-                    android:background="#00000000"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
                     android:fontFamily="@font/cutive_mono"
-                    android:textColorHint="@color/textcolor3"
-                    android:textColor="@color/textcolor1"
-                    app:layout_constraintLeft_toRightOf="@+id/relativelayout_serach"
-                    android:id="@+id/autoCompleteTextView"/>
-            <RelativeLayout
-                    android:id="@+id/relativelayout_serach"
-                    android:layout_width="50dp"
-                    android:layout_height="match_parent"
+                    android:text="Nito"
+                    android:textColor="@color/textcolor0"
+                    android:textSize="30sp"
+                    android:textStyle="normal"
+                    android:visibility="gone"
                     app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+            <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginRight="20dp"
+                    android:id="@+id/imageview_navigation"
+                    app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent">
-                <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="25dp"
-                        app:srcCompat="@drawable/icons_search"
-                        android:layout_centerInParent="true"
+                    app:srcCompat="@drawable/ic_settings" />
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraintlayout_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="70dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/bg_shadow_border"
+                    android:elevation="2dp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                <AutoCompleteTextView
+                        android:id="@+id/autoCompleteTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:id="@+id/imageView_search_icon"/>
-            </RelativeLayout>
+                        android:background="#00000000"
+                        android:cursorVisible="false"
+                        android:fontFamily="@font/cutive_mono"
+                        android:hint="Search Teachers"
+                        android:textColor="@color/textcolor1"
+                        android:textColorHint="@color/textcolor3"
+                        android:textSize="16sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toRightOf="@+id/relativelayout_serach"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                <RelativeLayout
+                        android:id="@+id/relativelayout_serach"
+                        android:layout_width="50dp"
+                        android:layout_height="match_parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageView
+                            android:id="@+id/imageView_search_icon"
+                            android:layout_width="20dp"
+                            android:layout_height="25dp"
+                            android:layout_centerInParent="true"
+                            android:layout_marginLeft="10dp"
+                            app:srcCompat="@drawable/icons_search" />
+                </RelativeLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="120dp"
+                    android:background="@color/babypowder">
+
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                    <RelativeLayout
+                            android:id="@+id/relativeLayout1"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            app:layout_constraintTop_toBottomOf="@+id/constraintlayout_1">
+
+                        <TextView
+                                android:id="@+id/textview1"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="30dp"
+                                android:layout_marginRight="20dp"
+                                android:fontFamily="@font/cutive_mono"
+                                android:text="@={home.textTitleOne}"
+                                android:textColor="@color/textcolor0"
+                                android:textSize="27sp"
+                                android:textStyle="normal" />
+
+                    </RelativeLayout>
+
+                    <!-- tools:listitem="@layout/listview_teachers"-->
+
+                    <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recyclerView_teachers"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="30dp"
+                            android:layout_marginTop="20dp"
+                            android:layoutAnimation="@anim/layout_animation_right"
+                            android:orientation="horizontal"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            app:layout_constraintTop_toBottomOf="@+id/relativeLayout1"
+                            tools:listitem="@layout/listview_teachers" />
+
+
+                    <RelativeLayout
+                            android:id="@+id/relativeLayout2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            app:layout_constraintTop_toBottomOf="@+id/recyclerView_teachers">
+
+                        <TextView
+                                android:id="@+id/textview3"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="30dp"
+                                android:layout_marginRight="20dp"
+                                android:fontFamily="@font/cutive_mono"
+                                android:text="You can select papers"
+                                android:textColor="@color/textcolor0"
+                                android:textSize="27sp"
+                                android:textStyle="normal" />
+
+                    </RelativeLayout>
+
+
+                    <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recyclerView_papers"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="30dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginBottom="20dp"
+                            android:layoutAnimation="@anim/layout_animation_right"
+                            android:orientation="horizontal"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
+                            tools:listitem="@layout/listview_papers" />
+
+                </LinearLayout>
+            </ScrollView>
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <com.google.android.material.navigation.NavigationView
+                android:id="@+id/nav_view"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="end"
+                android:background="@color/theamcolor"
+                android:fitsSystemWindows="true">
 
-        <ScrollView
-                android:layout_width="match_parent"
-                android:background="@color/babypowder"
-               android:layout_marginTop="120dp"
-                android:layout_height="match_parent">
+            <include
+                    layout="@layout/custom_navigationview"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="50dp"
+                    android:layout_height="match_parent" />
 
-            <LinearLayout android:layout_width="match_parent"
-                          android:layout_height="match_parent"
-                          android:orientation="vertical">
-
-                <RelativeLayout android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/relativeLayout1"
-                                app:layout_constraintTop_toBottomOf="@+id/constraintlayout_1"
-                                android:layout_marginTop="20dp">
-
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="27sp"
-                            android:textColor="@color/textcolor0"
-                            android:id="@+id/textview1"
-                            android:text="@={home.textTitleOne}"
-                            android:layout_marginLeft="30dp"
-                            android:fontFamily="@font/cutive_mono"
-                            android:textStyle="normal"
-                            android:layout_marginRight="20dp"/>
-
-                </RelativeLayout>
-
-                <!-- tools:listitem="@layout/listview_teachers"-->
-
-                <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerView_teachers"
-                        android:layout_width="match_parent"
-                        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginLeft="30dp"
-                        android:layoutAnimation="@anim/layout_animation_right"
-                        tools:listitem="@layout/listview_teachers"
-                        android:orientation="horizontal"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        android:layout_height="wrap_content"/>
-
-
-                <RelativeLayout android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/relativeLayout2"
-                                app:layout_constraintTop_toBottomOf="@+id/recyclerView_teachers"
-                                android:layout_marginTop="20dp">
-
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="27sp"
-                            android:textColor="@color/textcolor0"
-                            android:id="@+id/textview3"
-                            android:text="You can select papers"
-                            android:layout_marginLeft="30dp"
-                            android:fontFamily="@font/cutive_mono"
-                            android:textStyle="normal"
-                            android:layout_marginRight="20dp"/>
-
-                </RelativeLayout>
-
-
-                <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerView_papers"
-                        android:layout_width="match_parent"
-                        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginBottom="20dp"
-                        android:layout_marginLeft="30dp"
-                        tools:listitem="@layout/listview_papers"
-                        android:layoutAnimation="@anim/layout_animation_right"
-                        android:orientation="horizontal"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        android:layout_height="wrap_content"/>
-
-            </LinearLayout>
-        </ScrollView>
-
-
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.navigation.NavigationView>
+    </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
