--- a/app/src/main/res/layout/listview_papers.xml
+++ b/app/src/main/res/layout/listview_papers.xml
@@ -4,8 +4,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_dealer_to_visits"
         style="@style/CardViewStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_alignParentTop="true"
         app:cardBackgroundColor="@color/babypowder"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,32 +27,46 @@
             android:layout_height="match_parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             app:layout_constraintTop_toTopOf="parent">
 
 
-        <ImageView
-                android:id="@+id/img_home_teacher"
-                android:layout_width="100dp"
-                android:layout_height="80dp"
+
+        <RelativeLayout
+                android:id="@+id/relativeLayout_coverimage"
+                android:layout_width="match_parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
+                android:background="@color/colorPrimary"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/ic_paper"/>
+                android:layout_height="100dp" >
+
+            <ImageView
+                    android:id="@+id/img_home_papers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="100dp"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/ic_paper"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+
+        </RelativeLayout>
+
+
 
 
         <TextView
                 android:id="@+id/textview_home_paper_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/img_home_teacher"
+                app:layout_constraintTop_toBottomOf="@+id/relativeLayout_coverimage"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:text=""
+                android:text="sdsddsds"
                 app:fontFamily="@font/cutive_mono"
                 android:textColor="@color/textcolor1"
                 android:textSize="16sp" android:textStyle="bold"/>
