--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_dealer_to_visits"
         style="@style/CardViewStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_alignParentTop="true"
         app:cardBackgroundColor="@color/babypowder"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -29,74 +27,71 @@
             android:layout_height="match_parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             app:layout_constraintTop_toTopOf="parent">
 
-        <RelativeLayout
-                android:id="@+id/relativeLayout_coverimage"
-                android:layout_width="match_parent"
+
+
+
+
+
+
+
+
+
+
+        <ImageView
+                android:id="@+id/img_home_teacher"
+                android:layout_width="100dp"
+                android:layout_height="80dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                android:background="@color/colorPrimary"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_height="match_parent" >
-
-            <ImageView
-                    android:id="@+id/img_home_teacher"
-                    android:layout_width="wrap_content"
-                    android:layout_height="100dp"
-                    android:layout_centerHorizontal="true"
-                    android:src="@drawable/ic_profile_users"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
-
-
-        </RelativeLayout>
-
-
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/ic_paper"/>
 
 
         <TextView
-                android:id="@+id/textview_home_teachername"
+                android:id="@+id/textview_home_paper_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/relativeLayout_coverimage"
+                app:layout_constraintTop_toBottomOf="@+id/img_home_teacher"
                 app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:text="Amith Pussellasasassasasas"
+                android:text=""
                 app:fontFamily="@font/cutive_mono"
                 android:textColor="@color/textcolor1"
                 android:textSize="16sp" android:textStyle="bold"/>
 
         <TextView
-                android:id="@+id/textview_home_teachersubject"
+                android:id="@+id/textview_home_paper_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/textview_home_teachername"
+                app:layout_constraintTop_toBottomOf="@+id/textview_home_paper_name"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="2dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:text="Physics"
+                android:text=""
                 app:fontFamily="@font/cutive_mono"
                 android:textColor="@color/textcolor0"
                 android:textSize="14sp"/>
 
 
         <TextView
-                android:id="@+id/textview_home_teacherclass"
+                android:id="@+id/textview_home_paper_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/textview_home_teachersubject"
+                app:layout_constraintTop_toBottomOf="@+id/textview_home_paper_type"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="2dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
-                android:text="AL"
+                android:text=""
                 app:fontFamily="@font/cutive_mono"
                 android:textColor="@color/textcolor1"
                 android:textSize="13sp"/>
